# anemoi-inference

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTORS.md  README.md  anemoi-config-debug.yaml  build.sh  config.yaml  config_0f465bb866b340adba5b66fe014df198.yaml  flatten_bench.py  for-stage-22450226918832.json  live_config.yaml  pyproject.toml  requests.json  ruff.toml  setup.py  test_XAI.py
.github/: CODEOWNERS  ci-hpc-config.yml  pull_request_template.md
.github/workflows/: ci.yml  downstream-ci-hpc.yml  inactivity-bot.yml  python-integration.yml  python-publish.yml  python-pull-request.yml  readthedocs-pr-update.yml
config/: config_045551dae75342fd95afcf153a9c06f4_finetune1_202308  config_2eef1e62a7274eaebe1557ebac316cf7_ft4_202308_noise1000  config_2eef1e62a7274eaebe1557ebac316cf7_ft4_202308_noise10000  config_2eef1e62a7274eaebe1557ebac316cf7_ft4_202308_noise100000  config_38e84d34f4d647269dbb12defb8cc295_high_noise_training_202308_noise10000  config_5cfa2a40fa214167847fb1d9b5161812  config_5cfa2a40fa214167847fb1d9b5161812_1139epochs_1member  config_5cfa2a40fa214167847fb1d9b5161812_1139epochs_TC  config_5cfa2a40fa214167847fb1d9b5161812_big  config_70d4909bd8a74320bc7273500876629c_finetune2_202308  config_9c804909c136445b80b6abb2823bc3d2_8e5steps  config_9c804909c136445b80b6abb2823bc3d2_8e5steps_202308  config_cde8235e2f4441afafacb79474d6502e_ft5_202308_noise100000  config_cf633e40133541b6b9de4bf1578b5846  config_dbd0997295dd4b9ab9d9410b44bbe206_1e5steps_202308  config_dbd0997295dd4b9ab9d9410b44bbe206_1e6steps_202308  config_dbd0997295dd4b9ab9d9410b44bbe206_1e6steps_202308_noise1000  config_dbd0997295dd4b9ab9d9410b44bbe206_4e5steps_202308  config_e5d235d297884fd39dff52e08a33fd87  config_f7d2aa9b1d9b479bbcd072204630ab74_dynamic.yaml  o320.yaml  o320_low_noise_sampling.yaml  o320_low_noise_sampling_parallel.yaml
config/previous/: config_045551dae75342fd95afcf153a9c06f4_finetune1_202308_noise1000  config_0ae0dba48fb444f99ef42ffb07d226cd_finetune3_202308  config_0ae0dba48fb444f99ef42ffb07d226cd_finetune3_202308_noise1000  config_20c6993866294adc8ebcaec21fd6d329_dynamic.yaml  config_5cfa2a40fa214167847fb1d9b5161812_1139epochs  config_9c804909c136445b80b6abb2823bc3d2_4e5steps  config_9c804909c136445b80b6abb2823bc3d2_4e5steps_202308  config_cde8235e2f4441afafacb79474d6502e_ft5_noise100000_large  config_dbd0997295dd4b9ab9d9410b44bbe206_5e5steps_202308  config_dbd0997295dd4b9ab9d9410b44bbe206_8e5steps_202308  config_e5f1790d9d26432db79e525f00ac0d32.yaml
docs/: Makefile  conf.py  images.pptx  index.rst  installing.rst  overview.rst  parallel.rst
docs/_static/schemas/: overview.excalidraw
docs/apis/: level1.rst  level2.rst  level3.rst
docs/apis/code/: level1_1.py  level1_2_.py  level2.py  level3_1.sh  level3_1.yaml  level3_2.sh
docs/cli/: checkpoint.rst  couple.rst  input-comparison.rst  inspect.rst  introduction.rst  metadata.rst  patch.rst  redefine.rst  redefine_graph.rst  requests.rst  requirements.rst  retrieve.rst  run.rst  sanitise.rst  validate.rst  variables.rst
docs/cli/yaml/: couple1.yaml
docs/configs/: forcings.rst  forcings_1.yaml  forcings_2.yaml  grib-input.rst  grib-output.rst  grib-output_1.yaml  inputs.rst  inputs_11.yaml  inputs_4.yaml  inputs_5.yaml  introduction.rst  introduction_1.yaml  introduction_2.yaml  introduction_3.yaml  outputs.rst  outputs_1.yaml  outputs_2.yaml  outputs_5.yaml  outputs_6.yaml  outputs_7.yaml  outputs_8.yaml  top-level.rst
docs/configs/preprocessors/: overlay_1.yaml  preprocessors.rst
docs/dev/: contributing.rst  integration-example.yaml  integration-tests.rst
docs/getting-started/: getting-started.rst
docs/inference/: external-graph.rst  input-types.rst  introduction.rst  parallel.rst  parallel_output.rst
docs/inference/apis/: introduction.rst  level1.rst  level3.rst
docs/inference/configs/: forcings.rst  grib-input.rst  grib-output.rst  icon-input.rst  inputs.rst  introduction.rst  multi-dataset.rst  outputs.rst  processors.rst  top-level.rst
docs/inference/yaml/: external-graph3.yaml  external-graph5.yaml
docs/modules/: checkpoint.rst  forcings.rst  input.rst  inputs.rst  metadata.rst  output.rst  outputs.rst  processor.rst  runner.rst
docs/schemas/: run-config.rst
docs/usage/: environment.rst  external-graph.rst  getting-started.rst  optimisation.rst  quickstart.rst
docs/usage/advanced/: cli.rst  remote-checkpoints.rst  saving.rst  sources.rst
docs/usage/apis/: introduction.rst
docs/usage/yaml/: external-graph1.yaml  external-graph2.yaml  external-graph3.yaml  external-graph4.yaml  quickstart1.yaml  quickstart2.yaml  quickstart3.yaml
notebooks/: install.txt  run_AIFS_v1.ipynb
src/anemoi/inference/: Untitled.ipynb  __init__.py  __main__.py  checkpoint.py  checks.py  condition.py  config.py  context.py  debug.py  decorators.py  device.py  downscaling.py  ds_checkpoint.py  ds_checkpoint_test_0.py  ds_input.py  ds_metadata.py  ds_metadata_test_0.py  ds_runner.py  forcings.py  input.py  lazy.py  legacy.py  memory.py  metadata.py  output.py  parallel.py  patch.py  perturbation.py  (+16 more)
tests/: conftest.py  dummy.py  fake_metadata.py  test_checkpoint.py  test_condition.py  test_coupling.py  test_datasets.py  test_huggingface.py  test_inference.py  test_inputs.py  test_integration.py  test_state.py  test_version.py
tests/checkpoint/: test_huggingface.py
tests/checkpoints/: .gitignore  ocean.json
tests/configs/: atmos.yaml  coupled.yaml  mwd.yaml  ocean.yaml  simple.yaml
tests/integration/: add_new_model.py  conftest.py  test_inference.py  test_integration.py
tests/metadata/: fake_metadata.py
tests/unit/: .gitignore  fake_metadata.py  test_checkpoint.py  test_clusters.py  test_config.py  test_coupling.py  test_decorators.py  test_downscaling.py  test_forecast.py  test_grib.py  test_huggingface.py  test_inference.py  test_input_cutout.py  test_inputs.py  test_metadata.py  test_netcdf.py  test_post_processors.py  test_templates.py  test_tensogram_output.py  test_testing_runners.py
to_delete/: anemoi-config.yaml
(+260 files in other folders)
