#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A package to hold various functions to support training of ML models."
name = "anemoi-inference"

dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

keywords = ["tools", "inference", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [
    "tomli",            # Only needed before 3.11
    "anemoi-utils>=0.2.1",
    "semantic-version",
    "pyyaml",
    "torch",
]

[project.optional-dependencies]


docs = [
    # For building the documentation
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
    "sphinx_argparse",
]

all = []

dev = []

[project.urls]
Homepage = "https://github.com/ecmwf/anemoi-inference/"
Documentation = "https://anemoi-inference.readthedocs.io/"
Repository = "https://github.com/ecmwf/anemoi-inference/"
Issues = "https://github.com/ecmwf/anemoi-inference/issues"
# Changelog = "https://github.com/ecmwf/anemoi-inference/CHANGELOG.md"

[project.scripts]
anemoi-inference = "anemoi.inference.__main__:main"

[tool.setuptools_scm]
version_file = "src/anemoi/inference/_version.py"
